# bazel-monorepo-example

./: .bazelrc  .gitignore  TODO  WORKSPACE  architecture.drawio
libs/python/response/: response_test.py
projects/calculator/: BUILD.bazel  calculator_test.py
projects/my_python_app/: BUILD.bazel  main.py
projects/project_b/: BUILD.bazel
projects/services/suggestions/: BUILD.bazel  main.py  main_test.py
projects/test/: BUILD.bazel
python/response/: BUILD.bazel  response.py
typescript/: BUILD.bazel  package.json  tsconfig.json
typescript/libs/dtos/: BUILD.bazel
typescript/libs/dtos/src/: index.ts  menu-item.dto.ts
typescript/projects/services/menu/: BUILD.bazel
typescript/projects/services/menu/src/: menu.controller.spec.ts  menu.controller.ts  menu.service.spec.ts  menu.service.ts
typescript/projects/services/orders/: README.md  package-lock.json  package.json
typescript/projects/ui/agent/: README.md
typescript/projects/ui/customer/: README.md
typescript/projects/ui/restaurant/: README.md  package-lock.json  package.json
